Ignore STATUS_HISTORY too to reduce dump size